--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,3 +1,14 @@
+@media screen and (max-width:1550px) {
+    .contact-map-form{
+        width: 475px;
+    }
+    .contact-map-form .name{
+        width: 100%;
+    }
+    .contact-map-form .email{
+        width: 100%;
+    }
+}
 @media screen and (max-width:1200px) {
     .container{
     width: 1140px;
@@ -7,11 +18,71 @@
     .container{
     width: 960px;
     }
+    .portfolio-items{
+        flex-direction: column;
+        align-items: start;
+        margin-top: 210px;
+    }
+    .portfolio-tabs-content{
+        order: 2;
+        margin-top: 0px;
+    }
+    .portfolio-tabs-wrapper{
+        margin-left: 0;
+    }
+    .blog-item-wrapper{
+        flex-direction: column;
+        align-items: center;
+    }
+    .blog .blog-item-other{
+        margin-top: 100px;
+    }
+    .blog-item{
+        flex-direction: column;
+        align-items: start;
+    }
+    .blog-img img{
+        width: 100%;
+    }
+    .blog-info{
+        margin-left: 0;
+        margin-top: 15px;
+    }
+    .blog-info::before{
+        display: none;
+    }
+    .contact-inner{
+        flex-direction: column;
+    }
+    .contact-text{
+        max-width: 100%;
+    }
+    .contact-map{
+        height: 100vh;
+    }
 }
 @media screen and (max-width:991px) {
     .container{
     width: 600px;
     }
+    .about{
+        &-descr{
+            z-index: 1;
+        }
+    }  
+    .portfolio-tabs-content{
+        flex-direction: column;
+        
+    }
+    .portfolio-item{
+        margin-top: 100px;
+    }
+    .portfolio-item:hover .item-content{
+        bottom: -65px;
+    }
+    .portfolio-items{
+        align-items: center;
+    }     
 }
 @media screen and (max-width:825px) {
     .intro-title h4{
@@ -27,12 +98,117 @@
         
         
     }
+    .about{
+        &-title, h4, span{
+            font-size: 45px;    
+        }
+        .about-descr::before{
+            display: none;              
+        }
+    }
+    
+}
+@media screen and (max-height:750px) {
+    .intro-inner {
+        padding-top: 300px;
+        padding-bottom: 250px;
+    }
+    .scroll-down-item::after {
+        content: "";
+        width: 3px;
+        position: absolute;
+        bottom: -232px;
+        height: 130px;
+        background-color: rgb(115, 115, 115);
+    }
+    .scroll-down-item::before{
+        bottom: -85px;
+    }
+    .scroll-down-text{
+        bottom: -175px;
+    }
+    .about-inner {
+        padding-top: 230px;
+        padding-bottom: 120px;
+    }
+    
+    .services-inner{
+        padding-top: 75px;
+        padding-bottom: 240px;
+    }
+    .portfolio-inner{
+        padding-top: 95px;
+        padding-bottom: 95px;
+    }
+    .portfolio-items{
+        margin-top: 110px;
+    }
+    .about-inner::after{
+        top: 28%;
+    }
+    .portfolio-tabs-content{
+        margin-top: 0;
+    }
+    .blog-inner{
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+    .contact-text{
+        padding-top: 50px;
+    }
+    .contact-info{
+        margin-top: 150px;
+    }
+    .contact-footer{
+        margin-top: 210px;
+    }
+}
+@media screen and (max-height:650px) {
+    .contact-map-form{
+        height: 100%;
+        bottom: 0;
+    }
+    .contact-footer{
+        margin-top: 110px;
+    }
+    .contact-info{
+        margin-top: 50px;
+    }
+    .portfolio-items{
+        margin-top: 20px;
+    }
+    .portfolio-item{
+        margin-top: 50px;
+    }
+    .intro-inner{
+        padding-top: 185px;
+    }
+    .about-inner{
+        padding-top: 50px;
+    }
+    .about-inner::before{
+        display: none;
+    }
+    .services-tabs{
+        margin-top: 20px;
+    }
+    .services .tabs-descr{
+        padding-bottom: 30px;
+        
+    }
+    .services-inner{
+        padding-top: 45px;
+    }
+    .about-title, .about h4, .about span{
+        font-size: 36px;
+    }
 }
 @media screen and (max-width:575px) {
     .container{
     width: 100%;
     
     }
+    
     .scroll-num{
         font-size: 42px;
         top: -75px;
@@ -52,6 +228,41 @@
             font-size: 14px;
         }
     }
+    .services .tabs-content{
+        max-width: 100%;
+    }
+    .services-title::before{
+        width: 100%;
+    }
+    .services-title{
+        font-size: 35px;
+    }
+    .portfolio-title::before{
+        width: 100%;
+    }
+    .portfolio-title{
+        font-size: 28px;
+    }
+    .contact-title::before{
+        width: 70%;
+    }
+    .contact-title{
+        font-size: 30px;
+    }
+    .contact-map-form{
+        width: 90%;
+    }
+    .contact-map-form form{
+        padding: 15px;
+    }
+    .about{
+        &-descr p{
+            width: 100%;    
+        }
+        &-descr{
+            margin-left: 0;
+        }
+    }
 }
 @media screen and (max-width:350px){
     .intro{
@@ -65,4 +276,13 @@
             width: 170px;
         }
     }
+    .about{
+        &-title, h4, span{
+            font-size: 25px;    
+        }
+        &-descr p{
+            width: 100%;    
+        }
+    }
+    
 } 
