--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -208,7 +208,9 @@
     width: 100%;
     
     }
-    
+    .social-list{
+        right: 15px;
+    }
     .scroll-num{
         font-size: 42px;
         top: -75px;
